# devcontainer-template

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
src/: main.py
src/demo_api/: app.py
